# transforms_fake

./: .gitignore  MANIFEST.in.txt  README.md  __init__.py  core.py  gui.py  pyproject.toml  requeriments.txt  requirements_variants.txt  script.py  setup.py  test_transforms_fake.py  teste2.py  thermal_image_augmenter.py
example/: example_usage.py
scripts/: quick_fix.py
transforms_fake/: __init__.py  core.py  gui.py  main.py  process_images.py  rotate_image_and_mask.py  utils.py
