[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transforms_fake"
version = "0.1.0"
description = "Cross-platform graphical installer with Docker support."
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
readme = "README.md"
requires-python = ">=3.9.13"
license = { text = "MIT" }
dependencies = [
    "opencv-contrib-python",
    "numpy",
    "pillow",
    "matplotlib",
    "tqdm",
    "json5",
    "torchvision",
    "opencv-python",
    "scikit-learn",
    "plotly",
    "PyQt5",
    "PyQt5-tools",
    "fastapi",
    "uvicorn"
]

[project.urls]
Homepage = "https://github.com/THOTIACORP/transforms_fake.git"
